--- a/references.bib
+++ b/references.bib
@@ -101,7 +101,7 @@
 }
 
 @Misc{harbor,
-  title        = {Site du projet {Harbor}, une interface pour registre d'images {Docker} privé, qui est inclu},
+  title        = {Site du projet {Harbor}, une interface pour registre d'images {Docker} privé, qui est inclut},
   howpublished = {\\\url{https://goharbor.io/}},
 }
 
@@ -121,12 +121,12 @@
 }
 
 @Misc{rancher,
-  title        = {Site de {Rancher}, une solution pour deployer et gérer des grappes {Kubernetes}},
+  title        = {Site de {Rancher}, une solution pour déployer et gérer des grappes {Kubernetes}},
   howpublished = {\\\url{https://rancher.com/}},
 }
 
 @Misc{rancher16,
-  title        = {Site de {Rancher v1.6}, une solution pour deployer et gérer des conteneurs {Docker}},
+  title        = {Site de {Rancher v1.6}, une solution pour déployer et gérer des conteneurs {Docker}},
   howpublished = {\\\url{https://rancher.com/docs/rancher/v1.6/en/}},
 }
 
