report: add references

--- a/references.bib
+++ b/references.bib
@@ -155,4 +155,19 @@
   howpublished = {\\\url{https://cloud.google.com/kubernetes-engine/}},
 }
 
+@Misc{prometheus,
+  title        = {Site de {Prometheus}, un projet permettant de faire de la surveillance d'infrastructure},
+  howpublished = {\\\url{https://prometheus.io/docs/introduction/overview/}},
+}
+
+@Misc{grafana,
+  title        = {Site de {Grafana}, un projet permettant la visualisation et la mise en forme de données métriques},
+  howpublished = {\\\url{https://grafana.com/}},
+}
+
+@Misc{alertmanager,
+  title        = {Site d'{Alertmanager}, un projet permettant de déclencher l'envoi d'alertes},
+  howpublished = {\\\url{https://prometheus.io/docs/alerting/alertmanager/}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
